# tree-sitter-mulle-objc

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  tree-sitter.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  lint.yml  package-pypi.yml  publish-to-npm.yml  publish-to-pypi.yml  publish.yml
.mulle/etc/project/: version-info.sh
bindings/c/: tree-sitter-mulle-objc.pc.in
bindings/go/: binding_test.go
bindings/node/: index.js
bindings/python/tree_sitter_objc/: __init__.py
bindings/rust/: build.rs
queries/: folds.scm  highlights.scm
src/: grammar.json  node-types.json
