[package]
name = "tree-sitter-mulle-objc"
description = "mulle-objc Objective-C grammar for tree-sitter"
version = "0.0.3"
authors = ["Nat! <nat-tree-sitter@mulle-kybernetik.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "objc", "mulle-objc"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/mulle-cc/tree-sitter-mulle-objc"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "LICENSE",
  "bindings/rust/*",
  "./grammar.js",
  "queries/*",
  "src/*",
  "./tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.24"
