[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-mulle-objc"
description = "mulle-objc Objective-C grammar for tree-sitter"
version = "0.0.3"
keywords = ["incremental", "parsing", "tree-sitter", "objc", "mulle-objc"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Nat!", email = "nat-tree-sitter@mulle-kybernetik.com" }]
requires-python = ">=3.9"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/mulle-cc/tree-sitter-mulle-objc"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
